fix(gh-pages): adjusting css paths to be relative so gh-pages can render website correctly

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
       </li>
       {{- end -}}
     </ul>
-    <p><a href="/notes/">all notes</a></p>
+    <p><a href="{{ "notes/" | relURL }}">all notes</a></p>
   </section>
   {{- end -}}
   
@@ -31,7 +31,7 @@
       </li>
       {{- end -}}
     </ul>
-    <p><a href="/blog/">all posts</a></p>
+    <p><a href="{{ "blog/" | relURL }}">all posts</a></p>
   </section>
   {{- end -}}
 </section>
