--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,7 +23,7 @@
 {{- end -}}
 
 {{/* css - single file, no dependencies */}}
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
 
 {{/* chart.js for workout visualizations */}}
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
