feat(workout): different workout tracks

--- a/layouts/shortcodes/lifting-prs.html
+++ b/layouts/shortcodes/lifting-prs.html
@@ -16,7 +16,7 @@
       <tr>
         <td>{{ .exercise }}</td>
         <td>{{ .max_weight }} lbs</td>
-        <td>{{ .max_reps }}</td>
+        <td>{{ .reps }}</td>
       </tr>
       {{ end }}
       {{ end }}
