feat(code-blocks): added ability to copy code blocks and stay consistent between themes

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,5 +19,8 @@
   
   {{/* theme toggle script */}}
   {{- partial "theme-toggle.html" . -}}
+  
+  {{/* copy code button script */}}
+  <script src="{{ "js/copy-code.js" | relURL }}"></script>
 </body>
 </html>
