fix(code-blocks): light mode code blocks

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -293,62 +293,274 @@ pre:not(.highlight pre) {
 }
 
 /* syntax highlighting - light mode (GitHub-inspired) */
-.highlight .c,
-.highlight .c1,
-.highlight .cm { color: #6a737d; } /* comments */
-.highlight .k,
-.highlight .kd,
-.highlight .kn { color: #d73a49; } /* keywords */
-.highlight .s,
-.highlight .s1,
-.highlight .s2 { color: #032f62; } /* strings */
-.highlight .n,
-.highlight .na { color: #6f42c1; } /* names/attributes */
-.highlight .nf { color: #6f42c1; } /* functions */
-.highlight .nb { color: #005cc5; } /* builtins */
-.highlight .mi,
-.highlight .mf { color: #005cc5; } /* numbers */
-.highlight .o { color: #d73a49; } /* operators */
-.highlight .p { color: var(--code-text); } /* punctuation */
+/* Chroma syntax highlighter classes */
+
+/* Base text */
+.chroma { color: #24292f; }
+
+/* Comments */
+.chroma .c,    /* Comment */
+.chroma .ch,   /* Comment.Hashbang */
+.chroma .cm,   /* Comment.Multiline */
+.chroma .c1,   /* Comment.Single */
+.chroma .cs,   /* Comment.Special */
+.chroma .cp,   /* Comment.Preproc */
+.chroma .cpf   /* Comment.PreprocFile */
+{ color: #6a737d; font-style: italic; }
+
+/* Keywords */
+.chroma .k,    /* Keyword */
+.chroma .kc,   /* Keyword.Constant */
+.chroma .kd,   /* Keyword.Declaration */
+.chroma .kn,   /* Keyword.Namespace */
+.chroma .kp,   /* Keyword.Pseudo */
+.chroma .kr,   /* Keyword.Reserved */
+.chroma .kt    /* Keyword.Type */
+{ color: #d73a49; font-weight: 600; }
+
+/* Strings */
+.chroma .s,    /* String */
+.chroma .sa,   /* String.Affix */
+.chroma .sb,   /* String.Backtick */
+.chroma .sc,   /* String.Char */
+.chroma .dl,   /* String.Delimiter */
+.chroma .sd,   /* String.Doc */
+.chroma .s2,   /* String.Double */
+.chroma .se,   /* String.Escape */
+.chroma .sh,   /* String.Heredoc */
+.chroma .si,   /* String.Interpol */
+.chroma .sx,   /* String.Other */
+.chroma .sr,   /* String.Regex */
+.chroma .s1,   /* String.Single */
+.chroma .ss    /* String.Symbol */
+{ color: #22863a; }
+
+/* Names */
+.chroma .n,    /* Name */
+.chroma .na,   /* Name.Attribute */
+.chroma .nc,   /* Name.Class */
+.chroma .no,   /* Name.Constant */
+.chroma .nd,   /* Name.Decorator */
+.chroma .ni,   /* Name.Entity */
+.chroma .ne,   /* Name.Exception */
+.chroma .nl,   /* Name.Label */
+.chroma .nn,   /* Name.Namespace */
+.chroma .nx,   /* Name.Other */
+.chroma .py,   /* Name.Property */
+.chroma .nt,   /* Name.Tag */
+.chroma .nv,   /* Name.Variable */
+.chroma .vc,   /* Name.Variable.Class */
+.chroma .vg,   /* Name.Variable.Global */
+.chroma .vi,   /* Name.Variable.Instance */
+.chroma .vm    /* Name.Variable.Magic */
+{ color: #6f42c1; }
+
+/* Functions */
+.chroma .nf,   /* Name.Function */
+.chroma .fm    /* Name.Function.Magic */
+{ color: #6f42c1; font-weight: 600; }
+
+/* Builtins */
+.chroma .nb,   /* Name.Builtin */
+.chroma .bp    /* Name.Builtin.Pseudo */
+{ color: #005cc5; }
+
+/* Numbers */
+.chroma .m,    /* Number */
+.chroma .mb,   /* Number.Bin */
+.chroma .mf,   /* Number.Float */
+.chroma .mh,   /* Number.Hex */
+.chroma .mi,   /* Number.Integer */
+.chroma .il,   /* Number.Integer.Long */
+.chroma .mo    /* Number.Oct */
+{ color: #005cc5; }
+
+/* Operators */
+.chroma .o,    /* Operator */
+.chroma .ow    /* Operator.Word */
+{ color: #d73a49; }
+
+/* Punctuation */
+.chroma .p     /* Punctuation */
+{ color: #24292f; }
+
+/* Generic */
+.chroma .ge { font-style: italic; }     /* Generic.Emph */
+.chroma .gs { font-weight: bold; }      /* Generic.Strong */
+.chroma .gd { color: #b31d28; background: #ffeef0; } /* Generic.Deleted */
+.chroma .gi { color: #22863a; background: #f0fff4; } /* Generic.Inserted */
+
+/* Line highlight */
+.chroma .hl { background: #fffbdd; }
 
 /* syntax highlighting - dark mode */
-body.dark .highlight .c,
-body.dark .highlight .c1,
-body.dark .highlight .cm { color: #8b949e; } /* comments */
-body.dark .highlight .k,
-body.dark .highlight .kd,
-body.dark .highlight .kn { color: #ff7b72; } /* keywords */
-body.dark .highlight .s,
-body.dark .highlight .s1,
-body.dark .highlight .s2 { color: #a5d6ff; } /* strings */
-body.dark .highlight .n,
-body.dark .highlight .na { color: #d2a8ff; } /* names/attributes */
-body.dark .highlight .nf { color: #d2a8ff; } /* functions */
-body.dark .highlight .nb { color: #79c0ff; } /* builtins */
-body.dark .highlight .mi,
-body.dark .highlight .mf { color: #79c0ff; } /* numbers */
-body.dark .highlight .o { color: #ff7b72; } /* operators */
-body.dark .highlight .p { color: #e4e4e7; } /* punctuation */
+body.dark .chroma { color: #e4e4e7; }
+
+body.dark .chroma .c,
+body.dark .chroma .ch,
+body.dark .chroma .cm,
+body.dark .chroma .c1,
+body.dark .chroma .cs,
+body.dark .chroma .cp,
+body.dark .chroma .cpf
+{ color: #8b949e; font-style: italic; }
+
+body.dark .chroma .k,
+body.dark .chroma .kc,
+body.dark .chroma .kd,
+body.dark .chroma .kn,
+body.dark .chroma .kp,
+body.dark .chroma .kr,
+body.dark .chroma .kt
+{ color: #ff7b72; font-weight: 600; }
+
+body.dark .chroma .s,
+body.dark .chroma .sa,
+body.dark .chroma .sb,
+body.dark .chroma .sc,
+body.dark .chroma .dl,
+body.dark .chroma .sd,
+body.dark .chroma .s2,
+body.dark .chroma .se,
+body.dark .chroma .sh,
+body.dark .chroma .si,
+body.dark .chroma .sx,
+body.dark .chroma .sr,
+body.dark .chroma .s1,
+body.dark .chroma .ss
+{ color: #a5d6ff; }
+
+body.dark .chroma .n,
+body.dark .chroma .na,
+body.dark .chroma .nc,
+body.dark .chroma .no,
+body.dark .chroma .nd,
+body.dark .chroma .ni,
+body.dark .chroma .ne,
+body.dark .chroma .nl,
+body.dark .chroma .nn,
+body.dark .chroma .nx,
+body.dark .chroma .py,
+body.dark .chroma .nt,
+body.dark .chroma .nv,
+body.dark .chroma .vc,
+body.dark .chroma .vg,
+body.dark .chroma .vi,
+body.dark .chroma .vm
+{ color: #d2a8ff; }
+
+body.dark .chroma .nf,
+body.dark .chroma .fm
+{ color: #d2a8ff; font-weight: 600; }
+
+body.dark .chroma .nb,
+body.dark .chroma .bp
+{ color: #79c0ff; }
+
+body.dark .chroma .m,
+body.dark .chroma .mb,
+body.dark .chroma .mf,
+body.dark .chroma .mh,
+body.dark .chroma .mi,
+body.dark .chroma .il,
+body.dark .chroma .mo
+{ color: #79c0ff; }
+
+body.dark .chroma .o,
+body.dark .chroma .ow
+{ color: #ff7b72; }
+
+body.dark .chroma .p
+{ color: #e4e4e7; }
+
+body.dark .chroma .gd { color: #ffa198; background: rgba(248, 81, 73, 0.15); }
+body.dark .chroma .gi { color: #7ee787; background: rgba(46, 160, 67, 0.15); }
+body.dark .chroma .hl { background: rgba(187, 128, 9, 0.15); }
 
 /* auto dark mode syntax highlighting */
 @media (prefers-color-scheme: dark) {
-  body:not(.light) .highlight .c,
-  body:not(.light) .highlight .c1,
-  body:not(.light) .highlight .cm { color: #8b949e; }
-  body:not(.light) .highlight .k,
-  body:not(.light) .highlight .kd,
-  body:not(.light) .highlight .kn { color: #ff7b72; }
-  body:not(.light) .highlight .s,
-  body:not(.light) .highlight .s1,
-  body:not(.light) .highlight .s2 { color: #a5d6ff; }
-  body:not(.light) .highlight .n,
-  body:not(.light) .highlight .na { color: #d2a8ff; }
-  body:not(.light) .highlight .nf { color: #d2a8ff; }
-  body:not(.light) .highlight .nb { color: #79c0ff; }
-  body:not(.light) .highlight .mi,
-  body:not(.light) .highlight .mf { color: #79c0ff; }
-  body:not(.light) .highlight .o { color: #ff7b72; }
-  body:not(.light) .highlight .p { color: #e4e4e7; }
+  body:not(.light) .chroma { color: #e4e4e7; }
+
+  body:not(.light) .chroma .c,
+  body:not(.light) .chroma .ch,
+  body:not(.light) .chroma .cm,
+  body:not(.light) .chroma .c1,
+  body:not(.light) .chroma .cs,
+  body:not(.light) .chroma .cp,
+  body:not(.light) .chroma .cpf
+  { color: #8b949e; font-style: italic; }
+
+  body:not(.light) .chroma .k,
+  body:not(.light) .chroma .kc,
+  body:not(.light) .chroma .kd,
+  body:not(.light) .chroma .kn,
+  body:not(.light) .chroma .kp,
+  body:not(.light) .chroma .kr,
+  body:not(.light) .chroma .kt
+  { color: #ff7b72; font-weight: 600; }
+
+  body:not(.light) .chroma .s,
+  body:not(.light) .chroma .sa,
+  body:not(.light) .chroma .sb,
+  body:not(.light) .chroma .sc,
+  body:not(.light) .chroma .dl,
+  body:not(.light) .chroma .sd,
+  body:not(.light) .chroma .s2,
+  body:not(.light) .chroma .se,
+  body:not(.light) .chroma .sh,
+  body:not(.light) .chroma .si,
+  body:not(.light) .chroma .sx,
+  body:not(.light) .chroma .sr,
+  body:not(.light) .chroma .s1,
+  body:not(.light) .chroma .ss
+  { color: #a5d6ff; }
+
+  body:not(.light) .chroma .n,
+  body:not(.light) .chroma .na,
+  body:not(.light) .chroma .nc,
+  body:not(.light) .chroma .no,
+  body:not(.light) .chroma .nd,
+  body:not(.light) .chroma .ni,
+  body:not(.light) .chroma .ne,
+  body:not(.light) .chroma .nl,
+  body:not(.light) .chroma .nn,
+  body:not(.light) .chroma .nx,
+  body:not(.light) .chroma .py,
+  body:not(.light) .chroma .nt,
+  body:not(.light) .chroma .nv,
+  body:not(.light) .chroma .vc,
+  body:not(.light) .chroma .vg,
+  body:not(.light) .chroma .vi,
+  body:not(.light) .chroma .vm
+  { color: #d2a8ff; }
+
+  body:not(.light) .chroma .nf,
+  body:not(.light) .chroma .fm
+  { color: #d2a8ff; font-weight: 600; }
+
+  body:not(.light) .chroma .nb,
+  body:not(.light) .chroma .bp
+  { color: #79c0ff; }
+
+  body:not(.light) .chroma .m,
+  body:not(.light) .chroma .mb,
+  body:not(.light) .chroma .mf,
+  body:not(.light) .chroma .mh,
+  body:not(.light) .chroma .mi,
+  body:not(.light) .chroma .il,
+  body:not(.light) .chroma .mo
+  { color: #79c0ff; }
+
+  body:not(.light) .chroma .o,
+  body:not(.light) .chroma .ow
+  { color: #ff7b72; }
+
+  body:not(.light) .chroma .p
+  { color: #e4e4e7; }
+
+  body:not(.light) .chroma .gd { color: #ffa198; background: rgba(248, 81, 73, 0.15); }
+  body:not(.light) .chroma .gi { color: #7ee787; background: rgba(46, 160, 67, 0.15); }
+  body:not(.light) .chroma .hl { background: rgba(187, 128, 9, 0.15); }
 }
 
 /* ------------------------------------------------------------------------------
